WordpressKube/mysql/ing_mysql.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql
  namespace: wordpress
spec:
  ingressClassName: public
  rules:
  - host: mysql.k8s.it
    http:
      paths:
      - backend:
          service:
            name: mysql
            port:
              number: 3306
        path: /
        pathType: Prefix
